<resources>
    <string name="app_name">ScreenMirroring</string>
    <string name="home">Home</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="settings">Settings</string>
    <string name="firstFragment">Home</string>
    <string name="secondFragment">Server</string>
    <string name="thirdFragment">Client</string>
    <string name="connect">Connect</string>
    <string name="stop">Stop</string>
    <string name="server_ip">Server IP</string>
    <string name="phone">Phone</string>
    <string name="text1">Scan QR code to download app</string>
    <string name="number1">1</string>
    <string name="text2">Open ScreenMirror Scan QR code</string>
    <string name="number2">2</string>
    <string name="text3">Share screen as per the instructions</string>
    <string name="number3">3</string>
    <string name="code">G Z 8 W 8 6</string>
    <string name="pc">PC</string>
    <string name="text_1">Download and install ScreenMirror PC version</string>
    <string name="number_1">1</string>
    <string name="text_2">Connect phone/computer to same net as meeting board</string>
    <string name="number_2">2</string>
    <string name="text_3">Open ScreenMirror Enter connection code: GZ8W86</string>
    <string name="number_3">3</string>
</resources>
